# greatest-portfolio

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT_PLAN.md  README.md  STACK_DECISIONS.md  package-lock.json  package.json
.agents/: README.md
.agents/skills/brainstorming/: SKILL.md
.agents/skills/code-simplifier/: SKILL.md
.agents/skills/executing-plans/: SKILL.md
.agents/skills/frontend-design/: SKILL.md
.agents/skills/react-hook-form/: SKILL.md
.agents/skills/react-next-best-practices/: SKILL.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/migrations/: README.md
docs/: PROJECT_STRUCTURE.md  PYTHON_BACKEND.md  README.md
frontend/: README.md  biome.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: README.md
frontend/src/modules/: README.md
frontend/src/server/: README.md
frontend/src/shared/: README.md
frontend/src/styles/: README.md
frontend/tests/e2e/: home.spec.ts
infra/: README.md
scripts/: README.md
