[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "greatest-portfolio-backend"
version = "0.1.0"
description = "Python backend for greatest-portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5",
  "fastapi>=0.118.0",
  "pydantic-settings>=2.11.0",
  "psycopg[binary]>=3.2.10",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
